--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,7 +24,11 @@
 
     "daisyui": "^2.42.1",
 
+    "date-fns": "^2.29.3",
+
     "react": "^18.2.0",
+
+    "react-day-picker": "^8.3.7",
 
     "react-dom": "^18.2.0",
 
