--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-DB_URI= mongodb+srv://workout:8qo9GJ9grdDgTPRt@cluster0.0057nn4.mongodb.net/?retryWrites=true&w=majority
+DB_URI=mongodb+srv://doctors-portal:6B9keSNE4Cc6QTjU@cluster0.yrzev3l.mongodb.net/?retryWrites=true&w=majority
