--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,11 +26,15 @@
 
     "date-fns": "^2.29.3",
 
+    "firebase": "^9.15.0",
+
     "react": "^18.2.0",
 
     "react-day-picker": "^8.3.7",
 
     "react-dom": "^18.2.0",
+
+    "react-firebase-hooks": "^5.1.1",
 
     "react-redux": "^8.0.5",
 
@@ -51,6 +55,8 @@
     "autoprefixer": "^10.4.13",
 
     "postcss": "^8.4.19",
+
+    "react-error-overlay": "^6.0.9",
 
     "tailwindcss": "^3.2.4",
 
