--- a/front-end/package.json
+++ b/front-end/package.json
@@ -36,6 +36,8 @@
 
     "react-firebase-hooks": "^5.1.1",
 
+    "react-hook-form": "^7.40.0",
+
     "react-redux": "^8.0.5",
 
     "react-router-dom": "^6.4.3",
